# proactive-affective-agent

./: .env.example  .gitignore  .rate_limited  CLAUDE.md  CODEX_BRIEFING.md  PROGRESS.md  PROJECT_CONTROL.md  README.md  health.md  paper_results_table.md  pyproject.toml
callm_baselines/: README.md  __init__.py  baseline_monolithic.py  combined_baselines.py  dl_baselines.py  feature_builder.py  text_baselines.py  transformer_baselines.py
configs/: agent.yaml  llm.yaml  prediction_schema.json  sensing.yaml
docs/: PROGRESS.md  advisor-sync-architecture.html  data-filtering-plan.md  design.md  next-steps-waiting-for-data.md  plan.html  results-dashboard.html  sensing_investigation_guide.md  timeline-viz.html
draft/: main.tex  references.bib  sample-manuscript.tex
notebooks/: 01_data_exploration.ipynb  02_sensing_alignment.ipynb  03_agent_prototype.ipynb  04_evaluation_analysis.ipynb
scripts/: auto_progress.py  backfill_unified_records.py  baselines_50user.py  build_filtered_data.py  clean_checkpoints.py  evaluate_learning_curve.py  evaluate_pilot.py  generate_dashboard.py  integration_test.py  merge_baseline_results.py  monitor_experiment.py  night_scheduler.py  per_user_stats.py  progress_dashboard.py  quality_check.py  queue_runner.py  queue_runner_gpt.py  representativeness_analysis.py  rerun_v2v4.sh  results_dashboard.py  reviewer_analyses.py  run_agentic_pilot.py  run_ar_baseline.py  run_dl_baselines.py  run_filtered_pilot.py  run_gpt51mini_parallel.sh  run_gpt54_parallel.sh  run_ml_baselines.py  run_ml_baselines_new.py  run_parallel.sh  run_pilot.py  (+16 more)
(+148 files in other folders)
